processed/gerrit/txt_full/33168.txt
Change:     33168
Subject:    LU-11128 ptlrpc: add debugging for idle connections
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/33168
Change-Id:  I47a4f73542fb4864e4f35275ecfe8907493ebbe5
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Andreas Dilger
Created:    2018-09-14 08:52:37.000000000
Updated:    2018-09-21 03:31:10.000000000
Patch Set:  3
Insertions: +46
Deletions:  -24
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Nathaniel Clark: +1; Alex Zhuravlev: +1; Oleg Drokin: +2
  Verified: Jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Jenkins, Oleg Drokin, Andreas Dilger, Alex Zhuravlev, Nathaniel Clark

--- Commit Message ---
LU-11128 ptlrpc: add debugging for idle connections

Add a "debug" parameter for the idle client disconnection so that
it can log disconnect/reconnect events to the console.

Print the idle time in the "import" file.

Enable the connection debugging for all test runs.

Signed-off-by: Andreas Dilger <adilger@whamcloud.com>
Change-Id: I47a4f73542fb4864e4f35275ecfe8907493ebbe5
Reviewed-on: https://review.whamcloud.com/33168
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Nathaniel Clark <nclark@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Andreas Dilger, 2018-09-14 08:52:37.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2018-09-14 08:56:26.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-09-14 09:00:57.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  In file included from /home/green/smt/git/lustre-release/libcfs/include/libcfs/libcfs.h:43:0,
                  from /home/green/smt/git/lustre-release/lustre/include/obd_support.h:42,
                  from /home/green/smt/git/lustre-release/lustre/ptlrpc/client.c:38:
 /home/green/smt/git/lustre-release/lustre/ptlrpc/client.c: In function ‘ptlrpc_request_alloc_internal’:
 /home/green/smt/git/lustre-release/libcfs/include/libcfs/libcfs_debug.h:152:23: error: format ‘%u’ expects argument of type ‘unsigned int’, but argument 4 has type ‘time64_t’ [-Werror=format=]
          static struct libcfs_debug_msg_data msgdata;                    \
                        ^
 /home/green/smt/git/lustre-release/libcfs/include/libcfs/libcfs_debug.h:168:2: note: in expansion of macro ‘__CDEBUG’
   __CDEBUG(&cdls, mask, format, ## __VA_ARGS__);   \
   ^
 /home/green/smt/git/lustre-release/lustre/ptlrpc/client.c:872:3: note: in expansion of macro ‘CDEBUG_LIMIT’
    CDEBUG_LIMIT(imp->imp_idle_debug,
    ^
 /home/green/smt/git/lustre-release/lustre/ptlrpc/client.c: At top level:
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Jenkins, 2018-09-14 09:12:02.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/648/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/58611/ : FAILURE

--- Message (Andreas Dilger, 2018-09-15 02:01:50.000000000) ---
Uploaded patch set 2.

--- Message (Andreas Dilger, 2018-09-15 02:03:55.000000000) ---
Patch Set 1:

Add missing hunk into commit.

--- Message (wc-checkpatch, 2018-09-15 02:04:24.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-09-15 02:05:39.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (Jenkins, 2018-09-15 02:24:46.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/659/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/58622/ : SUCCESS

--- Message (Autotest, 2018-09-15 02:25:22.000000000) ---
Patch Set 2:

Trevis Autotest started optional review-dne-zfs-part-3 session.

--- Message (Autotest, 2018-09-15 02:25:22.000000000) ---
Patch Set 2:

Trevis Autotest started optional review-dne-zfs-part-4 session.

--- Message (Autotest, 2018-09-15 02:25:23.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-part-1 session.

--- Message (Autotest, 2018-09-15 02:25:23.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-part-3 session.

--- Message (Autotest, 2018-09-15 02:25:23.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-zfs-part-1 session.

--- Message (Autotest, 2018-09-15 02:25:23.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-zfs-part-2 session.

--- Message (Autotest, 2018-09-15 02:25:23.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-ldiskfs session.

--- Message (Autotest, 2018-09-15 02:25:24.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-zfs session.

--- Message (Autotest, 2018-09-15 02:25:24.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-part-4 session.

--- Message (Autotest, 2018-09-15 02:25:25.000000000) ---
Patch Set 2:

Trevis Autotest started enforced review-dne-part-2 session.

--- Message (Maloo, 2018-09-15 06:31:43.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest from trevis-9vm1 for review-ldiskfs received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/69d902c0-cf15-408c-ac65-157ee1300f55). Ran 4 tests. No failures.

--- Message (Maloo, 2018-09-15 07:49:54.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest from trevis-16vm1 for review-dne-zfs-part-2 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/8f72dfe9-cbed-4dd9-b395-36eb1ce6dddd). Ran 10 tests. No failures.

--- Message (Maloo, 2018-09-15 07:58:15.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest from trevis-11vm1 for review-dne-part-1 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/0d701086-05e7-469a-b987-e741bd139a1e). Ran 6 tests. No failures.

--- Message (Maloo, 2018-09-15 08:10:03.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest from trevis-17vm1 for review-dne-part-2 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/77e9bcc1-eea1-4a88-8a35-05f2f25a9e91). Ran 10 tests. No failures.

--- Message (Maloo, 2018-09-15 08:18:13.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest from trevis-14vm1 for review-dne-zfs-part-4 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/13b4e0d3-6a70-4f67-b454-50a6457ee545). Ran 10 tests.  1 tests failed: replay-single.

--- Message (Maloo, 2018-09-15 08:28:02.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest from trevis-16vm6 for review-dne-part-4 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/bef72b7c-c0bb-4d53-8fa5-37900a8f64e3). Ran 10 tests. No failures.

--- Message (Maloo, 2018-09-15 08:32:05.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest from trevis-15vm1 for review-dne-zfs-part-3 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/c08c287b-d8ff-4f29-8feb-76b496a8a32d). Ran 3 tests.  1 tests failed: conf-sanity.

--- Message (Maloo, 2018-09-15 08:38:16.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest from trevis-4vm6 for review-dne-zfs-part-1 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/88f9730b-d0c0-4853-83a1-326fb686d58d). Ran 6 tests. No failures.

--- Message (Maloo, 2018-09-15 08:48:09.000000000) ---
Patch Set 2:

Tests uploaded by Trevis Autotest from trevis-12vm1 for review-zfs received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/312a30b3-c2ef-4bd6-a327-f947f421942c). Ran 8 tests. No failures.

--- Message (Maloo, 2018-09-15 09:22:10.000000000) ---
Patch Set 2: Verified+1

Tests uploaded by Trevis Autotest from trevis-15vm6 for review-dne-part-3 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/0bb6efd5-c973-4fc5-871a-75d1e7fdc6a2). Ran 3 tests. No failures.

--- Message (Andreas Dilger, 2018-09-17 08:17:08.000000000) ---
Patch Set 2:

I'd like to land this even if LU-11128 is fixed, since it may be useful for debugging in the field.

--- Message (Alex Zhuravlev, 2018-09-17 08:18:57.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Nathaniel Clark, 2018-09-18 13:45:25.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2018-09-21 03:29:10.000000000) ---
Patch Set 2: Code-Review+2

--- Message (unknown, 2018-09-21 03:31:10.000000000) ---
Change has been successfully cherry-picked as 0aa58d26f5df2b71a040ed6f0f419b925528b6ad by Oleg Drokin
